--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html> 
   <head><title>Pricing Card</title>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="style.css">
   
-  </head>
+      </head> 
+      <body>
             <div id="card">
                 <div id="top-section">
                     <h2>Join Our Community</h2>
@@ -34,6 +39,6 @@
               </div>
             </div>
     <script src="index.js"></script>
-  </head>
+  </body>
   
 </html>
